force-app/main/default/objects/Contestant__c/fields/Final_Rating__c.field-meta.xml
<CustomField>
    <fullName>Final_Rating__c</fullName>
    <formula>Score__c  /  Vote_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>