force-app/main/default/objects/Contestant__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <summarizedField>Vote__c.Rating__c</summarizedField>
    <summaryForeignKey>Vote__c.Score__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>