force-app/main/default/objects/Contestant__c/fields/Vote_Count__c.field-meta.xml
<CustomField>
    <fullName>Vote_Count__c</fullName>
    <label>Vote Count</label>
    <summaryForeignKey>Vote__c.Score__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>